# hoardy-web

./: .git-blame-ignore-revs  .gitmodules  CHANGELOG.md  README.md  README.org  default.nix  packages.nix  source.nix  update-changelog.sh  update-chromium-mv2.xml  update-docs.sh  update-readme.sh
.github/: description.txt
doc/: data-on-disk.md  description.amo.html  description.github.txt  gallery.md
dumb_server/: README.md  README.org  default.nix  pwebarc-dumb-dump-server.py  pwebarc_dumb_dump_server.py  pyproject.toml  update-readme.sh
extension/: .gitignore  README.amo.html  README.amo.md  README.md  README.org  background.js  build.sh  default.nix  gupdate.xml.template  make-firefox-xpi.sh  make-help.sh  manifest-chromium-mv2.json  manifest-chromium.json  manifest-commands.json  manifest-common.json  manifest-firefox-mv2.json  manifest-firefox.json  manifest.json  sanity.sh  update-readme.sh
extension/background/: capture-snapshot.js  capture.js  core.js  debugger.js  display.js  issue-acc.js  loggable-dump.js  main.html  main.js  main.template  notifier.js  persistence.js  reload.js  scheduler.js  state-global.js  state-tab.js  util.js
extension/inject/: snapshot.js
extension/lib/: base.js  caydarsc.js  cbor-s.js  compat.js  idbp.js  lslot.js  lutils.js  pako-ext.js  schedule-timeout.js  ui.js  utils.js  webext-rpc-client.js  webext-rpc-server.js  webext.js
extension/page/: changelog.js  changelog.template  help.html  help.js  help.org  help.template  log.html  log.js  main.css  minimal.js  minimal.template  popup.html  popup.js  popup.template  reqres-ui.css  reqres-ui.js  saved.js  saved.template  state.html  state.js  state.template  toc.only.template
firefox/: README.md  README.org  always-give-raw.patch
simple_server/: README.md  default.nix  hoardy_web_sas.py  mypy.ini  pyproject.toml  setup.py  update-readme.sh
tool/: README.md  default.nix  mypy.ini  pyproject.toml  pytest.ini  sanity.sh  test-cli-lib.sh  test-cli-wine.sh  test-cli.sh  test-tool.sh  update-readme.sh
tool/development/: describe-dir.py
tool/hoardy_web/: __init__.py  __main__.py  filter.py  html.py  io.py  linst.py  mime.py  mitmproxy.py  output.py  parser.py  sorted_index.py  source.py  static.py  time.py  tracking.py  type.py  url.py  util.py  web.py  wire.py  wrr.py
tool/script/: README.md  README.org  hoardy-web-spd-say  hoardy-web-view-pandoc  hoardy-web-view-w3m  hoardy-web-xdg-open  hoardy-web-xdg-open-mimi  wrrarms-pandoc  wrrarms-spd-say  wrrarms-w3m  wrrarms-xdg-open  wrrarms-xdg-open-mimi
tool/scripts/: wrrarms-w3m-jq  wrrarms-xdg-open
tool/wrrarms/: __init__.py  __main__.py  html.py  io.py  linst.py  mime.py  mitmproxy.py  output.py  type.py  util.py  wrr.py
