[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["hoardy_web"]
[project]
name = "hoardy-web"
version = "0.21.0"
authors = [{ name = "Jan Malakhovski", email = "oxij@oxij.org" }]
description = "Inspect, search, organize, programmatically extract values and generate static website mirrors from, archive, view, and replay `HTTP` archives/dumps in `WRR` (\"Web Request+Response\", produced by the `Hoardy-Web` Web Extension browser add-on) and `mitmproxy` (`mitmdump`) file formats."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Archiving :: Mirroring",
    "Topic :: System :: Logging",
    "Topic :: Internet :: Log Analysis",
    "Operating System :: POSIX",
    "Environment :: Console",
]
keywords = [
    "HTTP", "HTTPS",
    "WWW", "web", "browser",
    "site", "website",
    "download", "archive", "mirror",
    "wayback", "wayback machine",
]
requires-python = ">=3.10"
dependencies = [
    "kisstdlib==0.0.4",
    "sortedcontainers==2.4.*",
    "cbor2",
    "idna",
    "html5lib",
    "tinycss2>=1.3.0",
    "bottle",
]
[project.optional-dependencies]
mitmproxy = [
    "mitmproxy>=5.0",
]
[project.urls]
"Homepage" = "https://oxij.org/software/hoardy-web/"
"GitHub" = "https://github.com/Own-Data-Privateer/hoardy-web"
"Support Development" = "https://oxij.org/#support"
[project.scripts]
hoardy-web= "hoardy_web.__main__:main"
wrrarms = "hoardy_web.__main__:main"
